# model/saveDTO/productSaveDTO.go
@@ -1,7 +1,7 @@
 package saveDTO
 
-type MovieDTO struct {
+type ProductDTO struct {
 	Name        string `json:"name"`
 	Description string `json:"description"`
-	Genres      []uint `json:"id_genres"`
+	Categories  []uint `json:"idCategories"`
 }
