# model/views/product.go
@@ -1,0 +1,8 @@
+package views
+
+type ProductView struct {
+	Id          uint           `json:"id"`
+	Name        string         `json:"name"`
+	Description string         `json:"description"`
+	Categories  []CategoryView `json:"Categories"`
+}
